--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/shorts/PuXXe3vzCQE" target="_blank">
-                    <img src="https://i.ytimg.com/vi/PuXXe3vzCQE/mqdefault.jpg" alt="Do not fight your cravings for sweets- if you yourself turn sweet, sweets will lose their attraction">
+                    <img src="https://i.ytimg.com/vi/PuXXe3vzCQE/mqdefault.jpg" alt="Craving for Sweets? Watch This | Sadhguru">
                     <div class="video-info">
-                        <h3>Do not fight your cravings for sweets- if you yourself turn sweet, sweets will lose their attraction</h3>
+                        <h3>Craving for Sweets? Watch This | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">33 minutes ago</div>
+                        <div class="date">52 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Manual Trading: Winning the World Cup Trading Contest #shorts</h3>
                         <div class="channel">Algo Trading With Kevin Davey</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Whats the Chance the Market Closes Higher After a Gap Up?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">7 hours ago</div>
+                        <div class="date">8 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -299,7 +299,7 @@
                     <div class="video-info">
                         <h3>I’ll tell you all the secrets of making pizza live streaming</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">Yesterday</div>
+                        <div class="date">2 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Manual Trading: Winning the World Cup Trading Contest #shorts</h3>
                             <div class="channel">Algo Trading With Kevin Davey</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5094,7 +5094,7 @@
                         <div class="video-info">
                             <h3>Whats the Chance the Market Closes Higher After a Gap Up?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">7 hours ago</div>
+                            <div class="date">8 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7234,11 +7234,11 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/shorts/PuXXe3vzCQE" target="_blank">
-                        <img src="https://i.ytimg.com/vi/PuXXe3vzCQE/mqdefault.jpg" alt="Do not fight your cravings for sweets- if you yourself turn sweet, sweets will lose their attraction">
+                        <img src="https://i.ytimg.com/vi/PuXXe3vzCQE/mqdefault.jpg" alt="Craving for Sweets? Watch This | Sadhguru">
                         <div class="video-info">
-                            <h3>Do not fight your cravings for sweets- if you yourself turn sweet, sweets will lose their attraction</h3>
+                            <h3>Craving for Sweets? Watch This | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">33 minutes ago</div>
+                            <div class="date">52 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -8746,7 +8746,7 @@
                         <div class="video-info">
                             <h3>I’ll tell you all the secrets of making pizza live streaming</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">Yesterday</div>
+                            <div class="date">2 days ago</div>
                         </div>
                     </a>
                 </div>
