--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Craving for Sweets? Watch This | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">52 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on the Dysfunctional Dance with Thought</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -563,7 +563,7 @@
                     <div class="video-info">
                         <h3>The Power of Semen Retention | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -574,7 +574,7 @@
                     <div class="video-info">
                         <h3>A Mindful Start to Your Day, with Eckhart Tolle</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Craving for Sweets? Watch This | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">52 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7370,7 +7370,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on the Dysfunctional Dance with Thought</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7414,7 +7414,7 @@
                         <div class="video-info">
                             <h3>The Power of Semen Retention | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7425,7 +7425,7 @@
                         <div class="video-info">
                             <h3>A Mindful Start to Your Day, with Eckhart Tolle</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
