--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Teaching   a Subscriber  Pizza techniques</h3>
                         <div class="channel">Massimo Nocerino</div>
-                        <div class="date">52 minutes ago</div>
+                        <div class="date">1 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Darwinex TV: 21.10.2025</h3>
                         <div class="channel">Darwinex</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Awakening Your Power | Eckhart Tolle on Everyday Presence (Part 3)</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - Right Understanding</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>The problem with monetary targets in trading 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -442,7 +442,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN LEAK THEIR CAMERA ROLLS: IMPOSTOR EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">2 days ago</div>
+                        <div class="date">3 days ago</div>
                     </div>
                 </a>
             </div>
@@ -574,7 +574,7 @@
                     <div class="video-info">
                         <h3>Can't believe experienced golfers make this huge setup mistake...</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">3 days ago</div>
+                        <div class="date">4 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5083,7 +5083,7 @@
                         <div class="video-info">
                             <h3>Darwinex TV: 21.10.2025</h3>
                             <div class="channel">Darwinex</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5116,7 +5116,7 @@
                         <div class="video-info">
                             <h3>The problem with monetary targets in trading 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>Awakening Your Power | Eckhart Tolle on Everyday Presence (Part 3)</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - Right Understanding</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Teaching   a Subscriber  Pizza techniques</h3>
                             <div class="channel">Massimo Nocerino</div>
-                            <div class="date">52 minutes ago</div>
+                            <div class="date">1 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>The Golf Swing is an ILLUSION - Most Golfers Never Discover This Truth</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -9412,7 +9412,7 @@
                         <div class="video-info">
                             <h3>Can't believe experienced golfers make this huge setup mistake...</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">3 days ago</div>
+                            <div class="date">4 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9594,7 +9594,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN LEAK THEIR CAMERA ROLLS: IMPOSTOR EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">2 days ago</div>
+                            <div class="date">3 days ago</div>
                         </div>
                     </a>
                 </div>
